data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2396.wast
;; 7. **Test a block where a forward branch leads to a previously introduced implicit label incorrectly**:    - **Constraint Checked**: Verifies correct implicit label management.    - **Reasoning**: Branch misdirections to implicit labels can create erratic CFG behaviors.

(assert_invalid
  (module (func $label-mismanagement
    (block (result i32)
      (br 1 (i32.const 42))
      (i32.const 1)
    )
  ))
  "type mismatch"
)